Address Rigel's comments.
